[package]
name = "chip8"
version = "0.1.0"
authors = ["Andrew Goacher <andrewgoacher@outlook.com>"]
edition = "2018"

[lib]
name = "lib_chip"
path = "lib_chip/lib.rs"

[[bin]]
name = "chip8"
path = "src/main.rs"

[dependencies]
console = "0.7.7"
rand = "0.7.0"
sdl2 = { version = "0.32.0", features = ["bundled", "static-link"] }
